# payroll-system

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/: 20260227212423_initial.sql
src/: auth.rs  config.rs  errors.rs  initial.rs  main.rs  openapi.rs  state.rs
src/handlers/: employee.rs  general.rs  mod.rs  organization.rs  payroll.rs
src/models/: mod.rs
src/routes/: mod.rs
src/services/: email.rs  mod.rs  monnify.rs  payroll.rs
